cloud_class/k8s/task-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-api
  template:
    metadata:
      labels:
        app: task-api
    spec:
      containers:
      - name: task-api
        image: mariuskl/cloud_class:task3
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
spec:
  selector:
    app: task-api
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
  type: ClusterIP
