cloud_class/k8s/user-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: mariuskl/cloud_class:user2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  selector:
    app: user-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
